ASCII data type

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Datat Type Inspector"
+      content="Interactive web-application to inspect primitive data types"
     />
-    <title>Data Type Viewer</title>
+    <title>Data Type Inspector</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
