--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,13 @@
 
       gtag('config', 'G-W1FGMYYPMD');
     </script>
-    
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Datat Type Inspector"
-      content="Interactive web-application to inspect primitive data types"
-    />
+    <meta name="author" content="Luke DiGiovanna" />
+    <meta name="description" content="Interactive web-application to inspect primitive data types" />
+    <meta name="keywords" content="Float, Integer, Data, Type, Inspector, Luke, DiGiovanna, Github" />
     <title>Data Type Inspector</title>
   </head>
   <body>
